--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --white:#fff;
-    -black:#171717;
+    --black:#171717;
     --bg-color:#1c1c1e;
     --light-white:#999;
     --box-shadow: 0 .5rem 1rem #000;
@@ -19,5 +19,51 @@
 }
 
 *::selection{
-    
+    background: var(--white);
+    color: var(--black);
+}
+
+html{
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+    scroll-padding-top: 9rem;
+    overflow-x: hidden;
+}
+
+
+::-webkit-scrollbar{
+    width: 1rem;
+}
+::-webkit-scrollbar-thumb{
+    background: var(--white);
+}
+::-webkit-scrollbar-track{
+    background-color: transparent;
+}
+body{
+    background: var(--black);
+    padding-bottom: 8rem;
+}
+section{
+    padding: 3rem 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.header{
+    position: sticky;
+    top: 0; left: 0; right: 0;
+    background-color: var(--bg-color);
+    border-bottom: var(--border);
+    box-shadow: var(--box-shadow);
+    z-index: 1000;
+}
+.header .flex   {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem;
+}
+.header .flex .logo {
+    font-size: 2 rem;
+    color: var(--white);
 }
