add css to newsletter section

--- a/style.css
+++ b/style.css
@@ -591,12 +591,53 @@ section {
     box-shadow: var(--box-shadow);
 }
 
+.newsletter{
+    background: var(--bg-color);
 
+}
 
+.newsletter .news{
+    text-align: center;
+}
 
+.newsletter .news h3{
+    color: var(--white);
+    font-size: 3rem;
+    text-transform: uppercase;
+}
 
+.newsletter .news p{
+    line-height: 1.8;
+    font-size: 1.6rem;
+    color:var(--light-white);
+    max-width: 50rem;
+    margin: 1rem auto;
+}
 
+.newsletter .news form{
+    display: flex;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 1.5rem;
+}
 
+.newsletter .news form .input{
+    border-radius: 5rem;
+    padding: 1.2rem 1.5rem;
+    font-size: 1.8rem;
+    color: var(--white);
+    border: var(--border);
+    background-color: var(--black);
+    width: 30rem;
+    text-transform: none;
+}
+.newsletter .news form .input::placeholder{
+    text-transform: uppercase;
+}
+.newsletter .news form .btn{
+    margin-top: 0;
+}
 
 
 
@@ -687,6 +728,10 @@ section {
         text-align: center;
         width: 100%;
     }
+    .newsletter .news .form .input{
+        width: 100%;
+    }
+
 }
 
 
