--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ section {
 }
 
 .header .flex .logo {
-    font-size: 2 rem;
+    font-size: 2rem;
     color: var(--white);
 }
 
@@ -110,6 +110,7 @@ section {
     bottom: 2rem;
     left: 0;
     right: 0;
+    z-index: 5;
 
 }
 .navbar .nav{
@@ -783,8 +784,3 @@ section {
         font-size: 50%;
     }
 }
-
-
-
-
-
